test/valid/64854_switch/switch.agu
-- Author: 64854, Diogo Almeida

let switch (boolean) : Bool -> Bool =
    !boolean

let main(_) : Unit -> Unit =
    print(switch(true))