test/invalid-semantic/64854_type_check/type_check.agu
-- Author: 64854, Diogo Almeida

-- type checking
let a : Int = "Hello World!"